Rename project from "portfolio" to "portfolio_massyl" in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "portfolio_massyl",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://masoddr.github.io/portfolio_massyl",
